# nyctea

./: .gitignore  0.train_ddpg.py  0.train_ddpg_px4.py  0.train_ddpg_px4_thread.py  0.train_ddpg_thread.py  0.train_ddpg_thread_cmd.py  0.train_ddpg_thread_px4.py  1.fix_test.py  1.fix_test_px4.py  1.trans_bin2csv.py  1.trans_bin2csv_px4.py  LICENSE  README.md  pyproject.toml
Cptool/: boardMavlink.py  config.py  mavlink.py  mavtool.py  mission.txt  monitor.py  param_ardu.json  param_px4.json  simManager.py  simSimulator.py
Rl/: actor_critic.py  env.py  learning_agent.py
data/: config.yaml  config.yaml.example  fitCollection.txt  fitCollection_px4.txt  mission.txt  mission_px4.txt  param_ardu.json  param_px4.json
nyctea/: anomaly.py  board_mavlink.py  buffer.py  comms.py  concurrency.py  config.py  logging_config.py  mavtool.py  model_io.py  params.py  sim.py
nyctea/rl/: actions.py  actor_critic.py  env.py  learning_agent.py  reward.py
pipelines/: __main__.py  analyze.py  collect.py  repair.py  train.py  validate.py
scripts/: setup_sims.sh
tests/: test_actions.py  test_anomaly.py  test_buffer.py  test_concurrency.py  test_config.py  test_reward.py
validation/Ardupilot/: params.csv  params12.csv
validation/PX4/: params.csv  params4.csv
